--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -317,6 +317,10 @@ body{
                 margin-top: 65px;
             }
 
+            .section-inner-details-wrapper-content-hidden{
+                display: none;
+            }
+
                 .section-inner-details-wrapper-content_title{
                     font-family: 'Open Sans', sans-serif;
                     font-size: 20px;
